# sfml-backgammon

./: CMakeLists.txt
src/: Aliases.hpp  Application.cpp  Application.hpp  Board.cpp  Board.hpp  Button.cpp  Button.hpp  ButtonInfo.hpp  Chip.cpp  Chip.hpp  ChipColor.hpp  Constants.hpp  Game.cpp  Game.hpp  MoveCount.hpp  Player.cpp  Player.hpp  PlayerTurn.hpp  Random.cpp  Random.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  Slot.cpp  Slot.hpp  main.cpp
src/states/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  State.cpp  State.hpp  StateIdentifiers.hpp  StateStack.cpp  StateStack.hpp
